[package]
name = "serde_ltsv"
version = "0.1.0"
authors = ["OVH SAS <github@ovh.net>"]
edition = "2018"
license = "BSD-3-Clause"
license-file = "LICENSE"
description = "LTSV serialization using serde."
keywords = ["serde", "LTSV"]
readme = "README.md"
repository = "https://github.com/cdumay/rust-serde_ltsv"

[dependencies]
serde = "1.0"
serde-value = "0.6"